+5 +Paspaudus ant automobilio nuorodos, būtų rodoma detali informacija apie automobilį (savininkas, automobilio modelis, valstybinis numeris, VIN kodas)

--- a/mysite/autoservice/templates/automobiliai.html
+++ b/mysite/autoservice/templates/automobiliai.html
@@ -5,6 +5,6 @@
 {% block "content" %}
 <h1>Automobiliai:</h1>
 {% for automobilis in automobiliai %}
-<li>{{ automobilis }}</li>
+<li><a href="{% url 'automobilis' automobilis.id %}">{{ automobilis }}</a></li>
 {% endfor %}
 {% endblock %}
