+5 +Sukurti puslapį (per klasę views faile), pvz. autoservice/uzsakymai, kuriame būtų atvaizduoti visi serviso užsakymai.
+Paspaudus ant užsakymo nuorodos, būtų rodoma detali informacija apie užsakymą. Čia pat būtų matomos ir užsakymo eilučių informacija. (nepilnai)

--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'automobiliai' %}">Automobiliai</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'uzsakymai' %}">Užsakymai</a>
+                </li>
             </ul>
         </div>
     </div>
