--- a/mysite/autoservice/templates/automobilis.html
+++ b/mysite/autoservice/templates/automobilis.html
@@ -7,5 +7,10 @@
 <p><strong>Valstybinis numeris: </strong>{{ automobilis.valst_nr }}</p>
 <p><strong>VIN kodas: </strong>{{ automobilis.vin_kodas }}</p>
 <p><strong>Savininkas: </strong>{{ automobilis.kliento_vardas }}</p>
-
+<hr>
+<h2>Užsakymai:</h2>
+{% for uzsakymas in automobilis.orders.all %}
+<li><a href="{% url 'uzsakymas' uzsakymas.id %}">{{ uzsakymas }}</a></li>
+<hr>
+{% endfor %}
 {% endblock %}
