--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -25,6 +25,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                <li>
+                    <form action="{% url 'search' %}" method="get" class="form-inline my-2 my-md-0">
+                        <input name="query" class="form-control" type="text" placeholder="Paieška">
+                    </form>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'index' %}">HOME</a>
                 </li>
