6: +Padaryti, kad prie automobilio įrašo galima būtų pridėti nuotrauką ir ji būtų atvaizduojama automobilių puslapyje. Nuotrauka būtų atvaizduojama ir vieno automobilio aprašyme.

--- a/mysite/autoservice/templates/automobiliai.html
+++ b/mysite/autoservice/templates/automobiliai.html
@@ -3,10 +3,28 @@
 {% block "title" %}Autoservisas: Automobiliai{% endblock %}
 
 {% block "content" %}
+{% load static %}
 <h1>Automobiliai:</h1>
-{% for automobilis in automobiliai %}
-<li><a href="{% url 'automobilis' automobilis.id %}">{{ automobilis }}</a></li>
-{% endfor %}
+<div class="row">
+    {% for automobilis in automobiliai %}
+    <div class="col-md-4 d-flex align-items-stretch">
+        <div class="card mb-4 shadow-sm" style="width:300px">
+            {% if automobilis.nuotrauka %}
+            <img src="{{ automobilis.nuotrauka.url }}" class="card-img-top" alt="...">
+            {% else %}
+            <img src="{% static 'img/no-image.png' %}" class="card-img-top">
+            {% endif %}
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">{{ automobilis.automobilio_modelis }}</h6>
+                <p class="card-text"><a href="{{ automobilis.id }}">{{ automobilis.valst_nr }} ({{
+                    automobilis.kliento_vardas }})</a></p>
+            </div>
+        </div>
+    </div>
+
+
+    {% endfor %}
+</div>
 <div class="container puslapiai">
     <nav aria-label="...">
         {% if automobiliai.has_other_pages %}
