7: +Padaryti, kad pagrindiniame puslapyje būtų rodomas sesijos apsilankymų skaičius.

--- a/mysite/autoservice/templates/index.html
+++ b/mysite/autoservice/templates/index.html
@@ -9,6 +9,6 @@
     <li><strong>Atlikti užsakymai: </strong>{{ atlikti_uzsakymai }}</li>
     <li><strong>Aptarnaujami automobiliai: </strong>{{ automobiliu_kiekis }}</li>
 </ul>
-
+<p>Apsilankymų skaičius: {{ num_visits }}</p>
 
 {% endblock %}
