--- a/mysite/autoservice/templates/automobiliai.html
+++ b/mysite/autoservice/templates/automobiliai.html
@@ -16,8 +16,7 @@
             {% endif %}
             <div class="card-body">
                 <h6 class="card-subtitle mb-2 text-muted">{{ automobilis.automobilio_modelis }}</h6>
-                <p class="card-text"><a href="{{ automobilis.id }}">{{ automobilis.valst_nr }} ({{
-                    automobilis.kliento_vardas }})</a></p>
+                <p class="card-text"><a href="{{ automobilis.id }}">{{ automobilis.valst_nr }} ({{ automobilis.kliento_vardas }})</a></p>
             </div>
         </div>
     </div>
