8: +Padaryti, kad jei automobilio gražinimo laikas praėjo, užsakymas būtų pažymimas raudona spalva.

--- a/mysite/autoservice/templates/my_uzsakymai.html
+++ b/mysite/autoservice/templates/my_uzsakymai.html
@@ -5,7 +5,7 @@
 {% block "content" %}
 <h1>Užsakymai:</h1>
 {% for uzsakymas in uzsakymai %}
-<li><a href="{% url 'uzsakymas' uzsakymas.id %}">{{ uzsakymas }}</a></li>
+<li><a href="{% url 'uzsakymas' uzsakymas.id %}" class="{% if uzsakymas.is_overdue %}text-danger{% endif %}">{{ uzsakymas }}</a></li>
 <hr>
 {% endfor %}
 <div class="pagination">
