--- a/mysite/autoservice/templates/uzsakymas.html
+++ b/mysite/autoservice/templates/uzsakymas.html
@@ -11,6 +11,7 @@
 {% if uzsakymas.user == user %}
 <div>
     <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'uzsakymas_update' uzsakymas.id %}">Redaguoti</a>
+    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'uzsakymas_delete' uzsakymas.id %}">Ištrinti</a>
 </div>
 {% endif %}
 <table class="table table-striped">
