--- a/mysite/autoservice/templates/uzsakymas_form.html
+++ b/mysite/autoservice/templates/uzsakymas_form.html
@@ -10,7 +10,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Sukurti</button>
+            <button class="btn btn-outline-info" type="submit">Patvirtinti</button>
         </div>
     </form>
     </div>
