--- a/mysite/autoservice/templates/uzsakymas.html
+++ b/mysite/autoservice/templates/uzsakymas.html
@@ -34,7 +34,7 @@
         <td>
             {% if uzsakymas.user == user %}
                 <div>
-                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="">Redaguoti</a>
+                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'uzsakymoeilute_edit' uzsakymas.id line.id %}">Redaguoti</a>
                     <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'uzsakymoeilute_delete' uzsakymas.id line.id %}">Ištrinti</a>
                 </div>
             {% endif %}
